fixing navbar responsive on mobile

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -39,7 +39,7 @@ nav ul {
   margin: 0;
   padding: 0;
   background-color: #282c34;
-  border-radius: 9999px;
+  border-radius: 12px;
   box-shadow: 0px 0px 50px -11px rgba(0, 0, 0, 0.75) inset;
   -webkit-box-shadow: 0px 0px 50px -11px rgba(0, 0, 0, 0.75) inset;
   -moz-box-shadow: 0px 0px 50px -11px rgba(0, 0, 0, 0.75) inset;
@@ -53,6 +53,21 @@ nav a {
   text-decoration: none;
   color: #ffffff;
   font-size: 14px;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+  nav ul {
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 75%;
+  }
+
+  nav li {
+    flex: 1 1 33%;
+    text-align: center;
+    padding: 5px;
+  }
 }
 
 /* hero styling */
